# usertest

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  append_system_prompt.md  pytest.ini  requirements-dev.txt
.github/workflows/: ci.yml  publish-snapshots.yml
.pyfix/: sitecustomize.py
.usertest/: README.md  catalog.yaml
.usertest/missions/: maint_fix_friction_point.mission.md  maint_scaffold_toolchain_workflow.mission.md  self_batch_targets_prevalidation.mission.md  self_cli_mental_model.mission.md  self_docker_backend_primer.mission.md  self_end_to_end_run_single_target.mission.md  self_init_usertest_scaffold.mission.md  self_policy_security_review.mission.md  self_quickstart_minimal_smoke.mission.md  self_repo_snapshot_tool.mission.md  self_report_rerender_golden_fixture.mission.md  self_reports_pipeline_offline.mission.md  self_run_artifacts_orientation.mission.md
.usertest/personas/: README.md  repo_adoption_gatekeeper.persona.md  repo_ci_pipeline_operator.persona.md  repo_cli_wayfinder.persona.md  repo_container_platform_engineer.persona.md  repo_doc_first_diagnostician.persona.md  repo_external_contributor.persona.md  repo_qa_mission_designer.persona.md  repo_release_surgeon.persona.md  repo_report_consumer.persona.md  repo_security_compliance_reviewer.persona.md
apps/: README.md
apps/usertest/: README.md  pyproject.toml
apps/usertest_backlog/: README.md  pyproject.toml
apps/usertest_implement/: README.md  pyproject.toml
apps/usertest_implement/src/usertest_implement/: __main__.py  cli.py  finalize.py  git_ops.py  ledger.py  model_detect.py  summarize.py  tickets.py
apps/usertest_implement/tests/: test_finalize.py  test_ledger.py  test_model_detect.py  test_smoke.py  test_summarize.py  test_ticket_selection.py  test_tickets.py  test_verification_gate.py
configs/: agents.yaml  backlog_policy.yaml  catalog.yaml  issue_actions.json  policies.yaml  repo_intent.md  report.schema.json
configs/agent_prompts/: codex.base.md  codex.md
configs/backlog_prompts/: intent_snapshot.md  labeler.md  manifest.json  merge_judge.md  miner_default.md  miner_harness.md  miner_onboarding.md  miner_schema.md  ux_reviewer.md
configs/prompt_templates/: default_inline_report.prompt.md  inline_report_v1.prompt.md
configs/report_schemas/: batch_v1.schema.json  boundary_v1.schema.json  constrained_output_v1.schema.json  runbook_v1.schema.json  task_run_v1.schema.json  troubleshoot_v1.schema.json  variants_v1.schema.json
configs/sandboxes/: README.md
docs/: README.md  monorepo-packages.md
docs/agents/: README.md  claude.md  codex.md  gemini.md
docs/design/: README.md  adr_usertest_smoke_command.md  architecture.md  backlog_capture_principles.md  event-model.md  report-schema.md  run-artifacts.md
docs/how-to/: personas-and-missions.md  publish-snapshots.md  run-usertest.md  scaffold.md
docs/ops/: README.md  security.md
docs/reference/: cli.md  configuration.md  glossary.md  targets-yaml.md
docs/tutorials/: getting-started.md  monorepo-setup.md
examples/: generic_mission.md  generic_persona.md  matrix_spec_example.yaml  sample_run.ps1  sample_users.md  targets.yaml  targets_tiktok_vids_generate_variants_and_select.yaml
examples/golden_runs/: README.md
scripts/: README.md  doctor.ps1  doctor.sh  hook_logger.py  offline_first_success.ps1  offline_first_success.sh  offline_fixture_rerender.ps1  offline_fixture_rerender.sh  parse_preflight.ps1  python_preflight.ps1  render_operational_feedback.py  run_iteration_cycle.py  set_pythonpath.ps1  set_pythonpath.sh  smoke.ps1  smoke.sh  snapshot_repo.ps1  snapshot_repo.sh
tools/: README.md  check_package_readme_contract.py  lint_analysis_principles.py  lint_local_dependency_urls.py  lint_prompts.py  pdm_shim.py  requirements-publish.txt  smoke_import_guard.py  snapshot_repo.py  triage_atoms_audit.py
tools/migrations/: README.md  migrate_runs_layout.py
tools/monorepo_publish/: README.md  __init__.py  discover.py  publish_snapshots.py  publisher_python.py  rewrite.py  versioning.py
tools/scaffold/: README.md  ci_matrix.py  scaffold.py  (+6 more)
tools/templates/internal/python-poetry-app/: README.md  pyproject.toml
tools/templates/internal/python-uv-app/: README.md  pyproject.toml
tools/templates/internal/python-uv-app/tests/: test_basic.py
usertest/: __init__.py
usertest_backlog/: __init__.py
usertest_implement/: __init__.py
(+105 files in other folders)
